Add begginnig of blog

--- a/public/js/main/main.html
+++ b/public/js/main/main.html
@@ -10,6 +10,6 @@
 			</ul>
 		</div>
 	</div>
-	<div id="menu" class="fade-in"><span><a rel="nofollow" href="mailto:cesar@alanisoft.com"/>Contact</a></span></div>
+	<div id="menu" class="fade-in"><span><a rel="nofollow" href="mailto:cesar@alanisoft.com"/>Contact</a></span><span><a id="blog" href="/blog">Blog</a></span></div>
 </div>
 <div id="main-background"></div>
